# vyper-debug

./: .gitignore  README.md  pyproject.toml  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: pytest.yml
docs/: conf.py
tests/: conftest.py
tests/core/: test_import.py  test_source_map.py
tests/variables/: test_globals.py  test_print.py
vdb/: debug_computation.py  eth_tester_debug_backend.py  source_map.py  variables.py  vdb.py
