[tool.poetry]
name = "vyper-debug"
version = "0.1.3"
description = "Vyper Debugger"
authors = ["Vyper Contributors"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
py-evm = "^0.4.0-alpha.3"
0x-web3 = ">=4.8.1"
eth-tester = "^0.5.0-beta.3"
vyper = ">=0.1.0b8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
