[tool]
[tool.poetry]
name = "vyper-debug"
version = "0.1.2b7"
description = "vyper-debug: Easy to use Vyper debugger | vdb"
license = "MIT"
keywords = ["ethereum"]
classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Natural Language :: English", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: Implementation :: PyPy"]
homepage = "https://github.com/ethereum/vyper-debug"
authors = ["Jacques Wagener <jacques+pip@dilectum.co.za>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "*"
eth-tester = "==0.1.0b33"
flake8 = {version = "==3.4.1", optional = true}
isort = {version = "<5,>=4.2.15", optional = true}
py-evm = "==0.2.0a34"
pytest = {version = "==4.2.0", optional = true}
pytest-xdist = {optional = true, version = "*"}
tox = {version = "<3,>=2.9.1", optional = true}
vyper = ">=0.1.0b8"
web3 = "==4.8.1"

[tool.poetry.dev-dependencies]
ipython = "*"
pytest-watch = "<5,>=4.1.0"
twine = "*"
wheel = "*"

[tool.poetry.extras]
lint = ["flake8", "isort"]
test = ["pytest", "pytest-xdist", "tox"]
